fix: item column styles on mobile

--- a/webapp/src/components/NFTBrowse/NFTBrowse.css
+++ b/webapp/src/components/NFTBrowse/NFTBrowse.css
@@ -130,6 +130,10 @@
 }
 
 @media (max-width: 768px) {
+  .NFTBrowse .Row .right.Column {
+    max-width: 100%;
+  }
+
   .NFTBrowse .Layout .right.column > div {
     width: 100%;
   }
